fixed jumping links and autofill fields color

--- a/src/styles/blocks/entry-field.scss
+++ b/src/styles/blocks/entry-field.scss
@@ -19,17 +19,10 @@
     text-align: left;
     padding-left: 24px;
 
-    &:-webkit-autofill,
-    &:-webkit-autofill:hover,
-    &:-webkit-autofill:focus,
-    &:-webkit-autofill:active {
-      -webkit-text-fill-color: #fff !important;
-    }
-
     &::placeholder {
       font: inherit;
       font-weight: normal;
-      color: #687480;
+      color: $color-input-field-txt;
     }
 
     &:focus-visible {
