--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -108,21 +108,25 @@
       font-weight: 500;
       line-height: 16px;
       position: relative;
+      color: $color-white;
+      border-bottom: 2px solid transparent;
+      transition: all $transition-duration;
 
       @include on-desktop {
         font-size: 22px;
         font-weight: 500;
         line-height: 22px;
+
       }
 
       &:visited {
         color: $color-white;
       }
 
-      @include hover(transform, scale(1.2)){
+      &:hover {
+        transform: scale(1.1);
         border-bottom: 2px solid $color-white;
       }
-
     }
   }
 }
