--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 @import 'typography';
 @import 'blocks';
 
-*{
+* {
   scroll-behavior: smooth;
 }
 
@@ -12,6 +12,31 @@ body {
   min-width: 320px;
   padding: 0;
   margin: 0;
+}
+
+// /* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+textarea:-webkit-autofill:active,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus,
+select:-webkit-autofill:active {
+  //   -webkit-box-shadow: 0 0 0 30px red inset !important;
+
+  //   -webkit-text-fill-color: red !important;
+  //   -webkit-animation-name: autofill;
+  //   -webkit-animation-fill-mode: both;
+  //   -webkit-transition-delay: 9999s;
+  //   -webkit-transition-property: background-color, #fff;
+  -webkit-box-shadow: 0 0 0 50px white inset;
+  -webkit-text-fill-color: $color-input-field-txt;
+
 }
 
 .container {
