--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,6 +10,7 @@ $color-orange: #f14a27;
 $color-gray: #e0e0e0;
 $color-txt-h4: #687480;
 $color-txt-h5: #1a5a4c;
+$color-input-field-txt: #687480;
 $transition-duration: 0.3s;
 $pad-inline-mobile: 20px;
 $pad-inline-tablet: 34px;
